Configuration builder 7.x-1.x-dev, xxxx-xx-xx (development release)
--------------------------------------------------------------------------------

- #1692252: Fixed issue with newly created menu callbacks.
- #1692214 by mstrelan, Deciphered: Fixed flush cache issue with Form Builder.
- Added '#tree' property for fieldsets.
- Added initial Variable module integration.
- Added UI module.
- Added Configuration page blocks.
- Added variable_form_element element.
- Fixed validation errors.
- Removed all eval() functions.



Configuration builder 7.x-1.0-beta2, 2012-07-16
--------------------------------------------------------------------------------

- Added support for Fieldsets.
- Added example Configuration page.
- Added configurable access settings.
- Added chained tokens.
- Fixed validation of Form builder items.
- Fixed issue with single quotation marks in description fields.
- Fixed issue with pages not disabling/enabling without a manual cache clear.



Configuration builder 7.x-1.0-beta1, 2012-07-13
--------------------------------------------------------------------------------

- Initial commit.